# rust-intraday-macd-poc

./: .env  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  trading.db  trading.db-shm  trading.db-wal
config/: default.toml  test.toml
src/: analysis.rs  app.rs  config.rs  data_fetch.rs  eastmoney.rs  error.rs  executor.rs  indicators.rs  main.rs  storage.rs  tests.rs  web.rs
static/: index.html
systemd/: trader.service
