[package]
name = "rust-intraday-macd-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json","gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

redis = { version = "0.23", features = ["tokio-comp"] }
rusqlite = { version = "0.29", features = ["bundled"] }

warp = "0.3"

tracing = "0.1.40"
tracing-subscriber = "0.3"
anyhow = "1.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
